light-oauth2/openshift/yaml/oauth2-client-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.cmd: ../../bin/kompose --provider openshift --file ../docker-compose-oauth.yml
      convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    io.kompose.service: oauth2-client
  name: oauth2-client
spec:
  replicas: 1
  selector:
    io.kompose.service: oauth2-client
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: oauth2-client
    spec:
      containers:
      - image: tmp/oauth2-client:1.5.19-redhat
        name: oauth2-client
        ports:
        - containerPort: 6884
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: oauth2-client-config-claim
      restartPolicy: Always
      volumes:
      - name: oauth2-client-config-claim
        secret:
          defaultMode: 440
          secretName: oauth2-client-config-secret
  test: false
  triggers:
  - type: ConfigChange
status: {}
