light-oauth2/openshift/yaml/oauth2-token-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.cmd: ../../bin/kompose --provider openshift --file ../docker-compose-oauth.yml
      convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    io.kompose.service: oauth2-token
  name: oauth2-token
spec:
  replicas: 1
  selector:
    io.kompose.service: oauth2-token
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: oauth2-token
    spec:
      containers:
      - image: tmp/oauth2-token:1.5.19-redhat
        name: oauth2-token
        ports:
        - containerPort: 6882
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: oauth2-token-config-claim
      restartPolicy: Always
      volumes:
      - name: oauth2-token-config-claim
        secret:
          defaultMode: 440
          secretName: oauth2-token-config-secret
  test: false
  triggers:
  - type: ConfigChange
status: {}
