light-oauth2/openshift/yaml/oauth2-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../../bin/kompose --provider openshift --file ../docker-compose-oauth.yml
      convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    io.kompose.service: oauth2-client
    light-oauth2-cluster01: true
  name: oauth2-client
spec:
  ports:
  - name: "6884"
    port: 6884
    targetPort: 6884
  selector:
    io.kompose.service: oauth2-client
status:
  loadBalancer: {}
