light-oauth2/openshift/yaml/oauth2-code-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../../bin/kompose --provider openshift --file ../docker-compose-oauth.yml
      convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    io.kompose.service: oauth2-code
    light-oauth2-cluster01: true
  name: oauth2-code
spec:
  ports:
  - name: "6881"
    port: 6881
    targetPort: 6881
  selector:
    io.kompose.service: oauth2-code
status:
  loadBalancer: {}
