light-oauth2/openshift/yaml/oauth2-key-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../../bin/kompose --provider openshift --file ../docker-compose-oauth.yml
      convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    io.kompose.service: oauth2-key
    light-oauth2-cluster01: true
  name: oauth2-key
spec:
  ports:
  - name: "6886"
    port: 6886
    targetPort: 6886
  selector:
    io.kompose.service: oauth2-key
status:
  loadBalancer: {}
