light-oauth2/openshift/yaml/oauth2-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../../bin/kompose --provider openshift --file ../docker-compose-oauth.yml
      convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    io.kompose.service: oauth2-service
    light-oauth2-cluster01: true
  name: oauth2-service
spec:
  ports:
  - name: "6883"
    port: 6883
    targetPort: 6883
  selector:
    io.kompose.service: oauth2-service
status:
  loadBalancer: {}
