light-oauth2/openshift/yaml/oauth2-token-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../../bin/kompose --provider openshift --file ../docker-compose-oauth.yml
      convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    io.kompose.service: oauth2-token
    light-oauth2-cluster01: true
  name: oauth2-token
spec:
  ports:
  - name: "6882"
    port: 6882
    targetPort: 6882
  selector:
    io.kompose.service: oauth2-token
status:
  loadBalancer: {}
