light-oauth2/openshift/yaml/oauth2-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../../bin/kompose --provider openshift --file ../docker-compose-oauth.yml
      convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    io.kompose.service: oauth2-user
    light-oauth2-cluster01: true
  name: oauth2-user
spec:
  ports:
  - name: "6885"
    port: 6885
    targetPort: 6885
  selector:
    io.kompose.service: oauth2-user
status:
  loadBalancer: {}
