light-oauth2/openshift/yaml/oauth2-refresh-token-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: oauth2-refresh-token
spec:
  host: oauth2-refresh-token.example.com
  port:
    targetPort: '6887'
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: oauth2-refresh-token
    weight: 100
  wildcardPolicy: None
status:
