light-oauth2/openshift/yaml/oauth2-service-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: oauth2-service
spec:
  host: oauth2-service.example.com
  port:
    targetPort: '6883'
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: oauth2-service
    weight: 100
  wildcardPolicy: None
status:
