light-oauth2/openshift/yaml/oauth2-token-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: oauth2-token
spec:
  host: oauth2-token.example.com
  port:
    targetPort: '6882'
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: oauth2-token
    weight: 100
  wildcardPolicy: None
status:
